# dike

./: Cargo.toml  README.md  flake.nix
example/fibonacci/: fibonacci.py  test.yaml  testfile
examples/add/: add.py
examples/add/tests/: fail.out  signal.in  timeout.in
examples/fibonacci/: fibonacci.py
examples/fuzz/: case.py
src/: error.rs  fuzz.rs  fuzzer.rs  loader.rs  main.rs  process.rs  report.rs  result.rs  runner.rs  test.rs  tester.rs  testfile.rs
