[package]
name = "dike"
version = "0.2.0"
authors = ["Rijk van Putten <rijk@rijkvp.nl>"]
description = "Multithreaded code tester"
edition = "2021"
license = "GPL-3.0"

[dependencies]
clap = { version = "4.0", features = ["derive"] }
thiserror = "1.0"
owo-colors = "3.5"
log = "0.4"
env_logger = "0.9"
rand = "0.8"
crossbeam = "0.8"
signal-hook = "0.3"
similar = "2.2.0"

[profile.release]
lto = true
strip = true
codegen-units = 1
opt-level = 3
