[package]
name = "dike"
version = "0.3.0"
authors = ["Rijk van Putten <rijk@rijkvp.nl>"]
description = "Parallel code tester/fuzzer"
edition = "2021"
license = "GPL-3.0"

[dependencies]
clap = { version = "4.2", features = ["derive"] }
thiserror = "1.0"
owo-colors = "3.5"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
rand = "0.8"
crossbeam = "0.8"
signal-hook = "0.3"
similar = "2.2"

[profile.release]
lto = true
strip = true
codegen-units = 1
opt-level = 3
