[package]
name = "dike"
version = "2.0.0"
authors = ["Rijk van Putten <rijk@rijkvp.nl>"]
description = "Parallel code tester"
edition = "2021"
license = "GPL-3.0"

[dependencies]
clap = { version = "4.2", features = ["derive"] }
thiserror = "1.0"
owo-colors = "4.1"
crossbeam-channel = "0.5"
signal-hook = "0.3"
similar = "2.2"
glob = "0.3.1"
log = "0.4.22"
env_logger = "0.11.5"

[profile.release]
lto = true
strip = true
codegen-units = 1
opt-level = 3
